--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -24,7 +24,7 @@
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow29">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn36_2" horizontalalign="center">
-                                                    <wm-button class="btn-default btn-primary" caption="Upload Photo" type="button" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()" margin="2em unset"></wm-button>
+                                                    <wm-button class="btn-default btn-primary" caption="Upload Photo" type="button" name="buttonUpdateProfilePic" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()" margin="2em unset"></wm-button>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
@@ -215,10 +215,10 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Upload Photo" iconclass="" name="dialog1" on-opened="dialog1Opened($event, $scope)">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Upload Photo" iconclass="wi wi-upload" name="dialog1" on-opened="dialog1Opened($event, $scope)">
             <wm-dialogactions name="dialogactions1">
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
-                <wm-button class="btn-primary" caption="Save" name="buttonSave" on-click="Widgets.liveformUpdate.save()" iconclass="wi wi-save"></wm-button>
+                <wm-button class="btn-primary" caption="Upload" name="buttonSave" on-click="Widgets.liveformUpdate.save()" iconclass="wi wi-upload"></wm-button>
             </wm-dialogactions>
             <wm-liveform novalidate="false" errormessage="" title="" iconclass="" defaultmode="Edit" dataset="bind:Variables.Cx2UsersData.dataSet" captionalign="left" captionposition="top" name="liveformUpdate">
                 <wm-layoutgrid columns="1" name="layoutgrid4">
