Fixed State field for CompanyUsers and Subscribers tab on MuniUsers Files modified - [MunicipalityUsers.html,CompanyUsers.html]

--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -138,7 +138,7 @@
                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
                         <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.city" name="label19"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridVendorUsers.selecteditem.users.states.stateName" name="label19"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow11">
@@ -216,7 +216,7 @@
                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
                         <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.city" name="label19"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.states.stateName" name="label19"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow11">
