--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -164,8 +164,8 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Country" name="label16"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.country" name="label19"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.states.stateName" name="label19"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow11">
